@@ -14,6 +14,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @WebServlet(urlPatterns = {"/staff/invoice/create"})
 public class CreateInvoiceController extends HttpServlet {
@@ -62,7 +63,7 @@ public class CreateInvoiceController extends HttpServlet {
             if (isCreated) {
                 // Đổi trạng thái Yêu cầu thành INVOICED (Đã xuất HĐ) để ẩn nút "Tạo hóa đơn" đi
                 requestServices.updateStatus(sysReq.getId().intValue(), "INVOICED");
-
+                System.out.println(sysReq.getId().intValue());
                 // Thành công -> Chuyển hướng sang trang danh sách yêu cầu (hoặc danh sách hóa đơn)
                 resp.sendRedirect(req.getContextPath() + "/staff/repair-request-list?message=invoice_created_success");
             } else {
@@ -72,7 +73,7 @@ public class CreateInvoiceController extends HttpServlet {
         } catch (Exception e) {
             e.printStackTrace();
             // Bắt lỗi từ Service (nếu có ném Exception) và hiển thị lên URL
-            String errorMsg = URLEncoder.encode(e.getMessage() != null ? e.getMessage() : "Lỗi hệ thống", "UTF-8");
+            String errorMsg = URLEncoder.encode(e.getMessage() != null ? e.getMessage() : "Lỗi hệ thống", StandardCharsets.UTF_8);
             resp.sendRedirect(req.getContextPath() + "/staff/repair-request-list?message=error&detail=" + errorMsg);
         }
     }
